# polylingo-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
polylingo/: __init__.py  _async_client.py  _client.py  _errors.py  _http_utils.py  _types.py
polylingo/resources/: _async_batch.py  _async_health.py  _async_jobs.py  _async_languages.py  _async_translate.py  _async_usage.py  _batch.py  _health.py  _jobs.py  _languages.py  _translate.py  _usage.py
tests/: test_errors.py  test_jobs.py  test_translate.py
