[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polylingo"
version = "0.1.1"
description = "Official Python SDK for the PolyLingo translation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "PolyLingo" }]
keywords = ["translation", "i18n", "polylingo", "markdown", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://usepolylingo.com"
Documentation = "https://usepolylingo.com/en/docs/sdk/python"
Repository = "https://github.com/UsePolyLingo/polylingo-python"
Issues = "https://github.com/UsePolyLingo/polylingo-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",
  "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["polylingo"]

[tool.hatch.build.targets.sdist]
include = ["/polylingo", "/README.md", "/tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py39"
